--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@qdrant/js-client-rest": "^1.15.1",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^4.19.2",
+    "html-to-text": "^9.0.5",
     "node-fetch": "^3.3.2",
-    "openai": "^4.0.0"
+    "openai": "^4.104.0"
   }
 }
