--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
   "name": "openai-chatbot",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "Node/Express chatbot + quiz engine with OpenAI, Qdrant, and Supabase",
   "private": true,
+  "type": "module",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "NODE_OPTIONS='--trace-warnings' nodemon server.js"
+  },
+  "engines": {
+    "node": ">=18.17"
   },
   "dependencies": {
-    "@qdrant/js-client-rest": "^1.15.1",
-    "cheerio": "^1.1.2",
+    "@qdrant/js-client-rest": "^1.9.0",
+    "@supabase/supabase-js": "^2.57.4",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "html-to-text": "^9.0.5",
-    "node-fetch": "^3.3.2",
-    "openai": "^4.104.0"
+    "openai": "^4.57.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
